feat(form): finish roughly the from design

--- a/views/form/form.html
+++ b/views/form/form.html
@@ -10,20 +10,20 @@
     <h1>Character Creation Form</h1>
     <form id="characterForm">
         <div class="field">
-            <label for="name">Name:</label>
+            <label for="name">Nom :</label>
             <input type="text" id="name" name="name" required>
         </div>
         <div class="field">
-            <label for="description">Description:</label>
+            <label for="description">Description :</label>
             <textarea id="description" name="description" rows="4" required></textarea>
-        </div>
-        <div class="field">
-            <label for="gold">Gold:</label>
-            <input type="number" id="gold" name="gold" required>
         </div>
         <div class="selectors">
             <div class="field">
-                <label for="force">Force:</label>
+                <label for="gold">Pièces d'or :</label>
+                <input type="number" id="gold" name="gold" required>
+            </div>
+            <div class="field">
+                <label for="force">Force :</label>
                 <select id="force" name="force">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="field">
-                <label for="mentir_convaincre">mentir_convaincre:</label>
+                <label for="mentir_convaincre">Mentir / Convaincre :</label>
                 <select id="mentir_convaincre" name="mentir_convaincre">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="field">
-                <label for="intelligence">intelligence:</label>
+                <label for="intelligence">Intelligence :</label>
                 <select id="intelligence" name="intelligence">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="field">
-                <label for="courir_sauter">courir_sauter:</label>
+                <label for="courir_sauter">Courir / Sauter :</label>
                 <select id="courir_sauter" name="courir_sauter">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="field">
-                <label for="perception">perception:</label>
+                <label for="perception">Perception :</label>
                 <select id="perception" name="perception">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -108,7 +108,7 @@
             </div>
 
             <div class="field">
-                <label for="connaissance">connaissance:</label>
+                <label for="connaissance">Connaissance :</label>
                 <select id="connaissance" name="connaissance">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="field">
-                <label for="dexterite">dexterite:</label>
+                <label for="dexterite">Dexterite :</label>
                 <select id="dexterite" name="dexterite">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="field">
-                <label for="combat">combat:</label>
+                <label for="combat">Combat :</label>
                 <select id="combat" name="combat">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -159,7 +159,7 @@
             </div>
 
             <div class="field">
-                <label for="discretion">discretion:</label>
+                <label for="discretion">Discretion :</label>
                 <select id="discretion" name="discretion">
                     <option value="0">0</option>
                     <option value="1">1</option>
