--- a/views/form/form.css
+++ b/views/form/form.css
@@ -16,19 +16,23 @@ h1 {
 }
 
 form {
-    width: 1000px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 20px;
     background-color: #2f3136;
     border: 1px solid #40444b;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-label {
-    display: block;
-    margin: 10px 0;
-    color: #ffffff;
+option,
+select,
+textarea,
+input {
+    font-size: 1rem;
 }
 
 input[type="text"],
@@ -42,6 +46,19 @@ select {
     border: 1px solid #36393f;
     border-radius: 5px;
     outline: none;
+}
+
+label {
+    display: block;
+    margin: 10px 0;
+    color: #ffffff;
+    white-space: nowrap;
+    text-overflow: hidden;
+    font-weight: 500;
+}
+
+textarea {
+    resize: none;
 }
 
 input[type="text"]:focus,
@@ -69,4 +86,5 @@ input[type="submit"]:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 20px;
+    row-gap: 10px;
 }
