feat(server): create & setup server

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>Character Creation Form</title>
-    <link rel="stylesheet" type="text/css" href="../style/form.css">
+    <link rel="stylesheet" type="text/css" href="css/form.css">
 </head>
 
 <body>
