--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Character Creation Form</h1>
-    <form id="characterForm">
+    <form id="characterForm" method="POST">
         <div class="field">
             <label for="name">Nom :</label>
             <input type="text" id="name" name="name" required>
@@ -181,21 +181,6 @@
         <input type="submit" value="Submit">
     </form>
 
-    <script>
-        const characterForm = document.getElementById('characterForm');
-        characterForm.addEventListener('submit', function (e) {
-            e.preventDefault();
-            const formData = new FormData(characterForm);
-            const characterData = {};
-
-            formData.forEach((value, key) => {
-                characterData[key] = value;
-            });
-
-            // You can access the character data as an object and perform further actions here
-            console.log(characterData);
-        });
-    </script>
 </body>
 
 </html>
