feat(imrove_form): improve UX
* add error message when not the right amout of points

* redirector to success or error page

* add hp readonly in the form

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -16,9 +16,10 @@ h1 {
 }
 
 form {
-    max-width: 600px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 20px;
+    margin-bottom: 20px;
     background-color: #2f3136;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
